2008-12-11  Jaroslav Hajek  <highegg@gmail.com>
	
	* ov-re-mat.cc (Fdouble): Handle diagonal & perm matrices. 
	* ov-flt-re-mat.cc (Fsingle): Handle diagonal & perm matrices. 

2008-12-11  Jaroslav Hajek  <highegg@gmail.com>

	* ov-base-diag.cc (octave_base_diag<DMT,MT>::subsasgn): New method.
	* ov-base-diag.h (octave_base_diag<DMT,MT>::subsasgn): Declare it.
	(octave_base_diag<DMT,MT>::chk_valid_scalar): New method decl.

	* ov-re-diag.cc (octave_diag_matrix::chk_valid_scalar): New method
	override.
	* ov-re-diag.h: Declare it.
	* ov-flt-re-diag.cc (octave_float_diag_matrix::chk_valid_scalar): New
	method override.
	* ov-flt-re-diag.h: Declare it.
	* ov-cx-diag.cc (octave_complex_diag_matrix::chk_valid_scalar): New 
	method override.
	* ov-cx-diag.h: Declare it.
	* ov-flt-cx-diag.cc (octave_float_complex_diag_matrix::chk_valid_scalar): 
	New method override.
	* ov-flt-cx-diag.h: Declare it.

2008-12-10  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/expm.cc: Remove.
	* Makefile.in: Update.

2008-12-10  Jaroslav Hajek  <highegg@gmail.com>

	* ov-intx.h (OCTAVE_VALUE_INT_SCALAR_T::empty_clone): Construct an
	empty matrix instead of zero.

2008-12-07  Thorsten Meyer  <thorsten.meyier@gmx.de>

        * mappers.cc (Ftolower): Make lower alias of tolower, add tests
        * mappers.cc (Ftoupper): Make upper alias of toupper, add tests

2008-12-09  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/balance.cc (Fbalance): Exploit the new AEPBAL functionality.

2008-12-08  Jaroslav Hajek  <highegg@gmail.com>
	
	* xpow.cc ( xpow (const DiagMatrix& a, double b), 
	xpow (const DiagMatrix& a, const Complex& b), 
	xpow (const ComplexDiagMatrix& a, double b), 
	xpow (const ComplexDiagMatrix& a, const Complex& b), 
	xpow (const FloatDiagMatrix& a, float b), 
	xpow (const FloatDiagMatrix& a, const FloatComplex& b), 
	xpow (const FloatComplexDiagMatrix& a, float b), 
	xpow (const FloatComplexDiagMatrix& a, const FloatComplex& b)):
	New methods.
	* xpow.h: Declare them.